Fix footer overflow issue when credits open

--- a/main.less
+++ b/main.less
@@ -961,7 +961,9 @@ footer {
         flex-direction: column;
         justify-content: space-between;
     font-weight: 300;
+    margin-bottom: 30px;
     min-height: 50px;
+    overflow: hidden;
     padding: 15px;
     position: relative;
     -webkit-transform-style: preserve-3d;
